# puffer

./: .gitignore  README.md  all_logs_server_model.txt  argument_parser.py  clear_server.sh  clustering.py  config_creator.py  configure.ac  data_iterator.py  execute_train_test.sh  generate_data.py  logs.txt  models.py  normalization_functions.py  run_all_tests.py  run_python.sh  server_model.py  setup.sh  stages to run.md  train_models_script.py  train_nn.py  train_test_exp3_clusters.sh  train_test_exp3_custom.sh  train_test_policies.sh
clusters/: clusters_20_[7].pkl
exp3/: exp3_20_[7].npy  exp3_20_[7]_0.npy  exp3_20_[7]_1.npy  exp3_20_[7]_10.npy  exp3_20_[7]_11.npy  exp3_20_[7]_12.npy  exp3_20_[7]_13.npy  exp3_20_[7]_14.npy  exp3_20_[7]_15.npy  exp3_20_[7]_16.npy  exp3_20_[7]_17.npy  exp3_20_[7]_18.npy  exp3_20_[7]_19.npy  exp3_20_[7]_2.npy  exp3_20_[7]_3.npy  exp3_20_[7]_4.npy  exp3_20_[7]_5.npy  exp3_20_[7]_6.npy  exp3_20_[7]_7.npy  exp3_20_[7]_8.npy  exp3_20_[7]_9.npy
helper_scripts/: abr.yml  cc.yml  compile_mahimahi.sh  compile_puffer.sh  create_trace.sh  default.yml  download_libraries.sh  download_movies.sh  export_passwords.sh  migrate.sh  python_migrate.sh  python_run_servers.sh  run_servers.sh  settings.yml  settings.yml.save  setup_dbs.sh
logs/: server_logs.txt  train_test_log.txt
mahimahi/: config.status  configure  libtool
models/: ae_model.py  ae_trainer.py  basic_models.py  cluster_model.py  cluster_trainer.py  context_model.py  dnn_model.py  dnn_trainer.py  exp3.py  exp3_kmeans.py  helper_functions.py  model_creator.py  nn_models.py  reinforce_model.py  rl_model.py  rl_trainer.py  sl_model.py  sl_trainer.py  srl_model.py
src/: settings.yml  settings_offline.yml
src/abr/: exp3_policy.cc  exp3_policy.hh  puffer.cc  puffer.hh  puffer_exp3.cc  puffer_exp3.hh  puffer_raw.cc  puffer_raw.hh  puffer_reinforce.cc  puffer_reinforce.hh  puffer_ttp.cc  puffer_ttp.hh  reinforce_policy.cc  reinforce_policy.hh
src/atsc/: Makefile.am
src/forwarder/: Makefile.am
src/media-server/: Makefile.am  maintenance_server.cc  offline_test.py  rl_model.py  rl_server.py  run_servers.cc  tqdm.hpp  train_nn  train_nn.cc  train_nn_try.cc  train_nn_try.hh  train_test_simulation_main.py  ws_client.cc  ws_client.hh  ws_media_server.cc
src/monitoring/: Makefile.am
src/net/: Makefile.am  cc_logging.cc  cc_logging.hh  cc_logging_functions.hh  cc_logging_objects.cc  cc_logging_objects.hh  cc_logging_socket.cc  cc_socket_helper.cc  cc_socket_helper.hh  socket.cc  socket.hh  ws_server.cc  ws_server.hh
src/opus-encoder/: opus-encoder.cc
src/scripts/: clustering.py  data_collect_server.py  exp3_server.py  plot_ssim_rebuffer.py  reinforce_server.py  rl_server.py  ttp.py  ttp_linear.py
src/util/: Makefile.am  context.cc  context.hh  exp3.cc  exp3.hh  exp3_boggart.cc  exp3_boggart.hh  exp3_kmeans.cc  exp3_kmeans.hh  reinforce.cc  reinforce.hh  sender.cc  sender.hh
traces/: convert_mahimahi_format.py  convert_mahimahi_format_belgium.py  convert_mahimahi_format_norway.py  create_belgium_traces.sh  create_fcc_traces.sh  create_norway_traces.sh  cut_mahimahi_norway.py  generate_train_test_traces.py  load_webget_data.py  split_train_test.py
traces/cooked-apr/: trace_10373_http---www.google.com-mobile-  trace_10389_http---www.google.com-mobile-  trace_10695_http---www.google.com-mobile-  trace_11331_http---www.google.com-mobile-  trace_11880_http---www.google.com-mobile-  trace_157616_http---www.google.com-mobile-  trace_26409_http---www.google.com-mobile-  trace_26710_http---www.google.com-mobile-  trace_27140_http---www.google.com-mobile-  trace_27790_http---www.google.com-mobile-  trace_27947_http---www.google.com-mobile-  trace_27966_http---www.google.com-mobile-  trace_28206_http---www.google.com-mobile-  trace_30136_http---www.google.com-mobile-  trace_5559_http---www.google.com-mobile-  trace_5844_http---www.google.com-mobile-  trace_5917_http---www.google.com-mobile-  trace_599888_http---www.google.com-mobile-  trace_619834_http---www.google.com-mobile-  trace_636364_http---www.google.com-mobile-  trace_7940_http---www.google.com-mobile-  trace_797352_http---www.google.com-mobile-  trace_798314_http---www.google.com-mobile-  trace_800092_http---www.google.com-mobile-  trace_806338_http---www.google.com-mobile-  trace_8184_http---www.google.com-mobile-  trace_849900_http---www.google.com-mobile-  trace_9849_http---www.google.com-mobile-
traces/cooked-aug/: trace_10147_http---www.google.com-mobile-  trace_12003_http---www.google.com-mobile-  trace_1251_http---www.google.com-mobile-  trace_27405_http---www.google.com-mobile-  trace_27682_http---www.google.com-mobile-  trace_32413_http---www.google.com-mobile-  trace_32424_http---www.google.com-mobile-  trace_599888_http---www.google.com-mobile-  trace_7891_http---www.google.com-mobile-  trace_806000_http---www.google.com-mobile-  trace_806094_http---www.google.com-mobile-  trace_811962_http---www.google.com-mobile-  trace_849840_http---www.google.com-mobile-  trace_901656_http---www.google.com-mobile-  trace_901702_http---www.google.com-mobile-  trace_925_http---www.google.com-mobile-  trace_9523_http---www.google.com-mobile-
traces/cooked-jan/: trace_10784_http---www.google.com-mobile-  trace_11184_http---www.google.com-mobile-  trace_13075_http---www.google.com-mobile-  trace_13154_http---www.google.com-mobile-  trace_13481_http---www.google.com-mobile-  trace_14655_http---www.google.com-mobile-  trace_186878_http---www.google.com-mobile-  trace_214412_http---www.google.com-mobile-  trace_222097_http---www.google.com-mobile-  trace_26660_http---www.google.com-mobile-  trace_28901_http---www.google.com-mobile-  trace_615268_http---www.google.com-mobile-  trace_619840_http---www.google.com-mobile-  trace_636378_http---www.google.com-mobile-  trace_658571_http---www.google.com-mobile-  trace_6887_http---www.google.com-mobile-  trace_7804_http---www.google.com-mobile-  trace_7940_http---www.google.com-mobile-  (+9 more)
ttp/: model.json  rl_server_logs.txt
ttp/policy/: model120.pt  (+3 more)
weights/: ccp-0.py  logs.txt  server_logs.txt
(+4365 files in other folders)
